Installation de symfony/form dans le projet

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "projet festival hopophop",
     "type": "project",
     "require": {
-        "twig/twig": "v2.3.0"
+        "twig/twig": "v2.3.0",
+        "symfony/form": "^3.2"
     },
     "authors": [
         {
