--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,7 @@
     "description": "projet festival hopophop",
     "type": "project",
     "require": {
-        "twig/twig": "v2.3.0",
-        "symfony/form": "^3.2",
-        "symfony/http-foundation": "^3.2"
+        "twig/twig": "v2.3.0"
     },
     "authors": [
         {
