--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "type": "project",
     "require": {
         "twig/twig": "v2.3.0",
-        "symfony/form": "^3.2",
-        "twig/extensions": "^1.4"
-
+        "twig/extensions": "^1.4",
+        "swiftmailer/swiftmailer": "^5.4",
+        "vlucas/valitron": "^1.4"
     },
     "authors": [
         {
