--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
     "require": {
         "twig/twig": "v2.3.0",
         "twig/extensions": "^1.4",
-        "swiftmailer/swiftmailer": "^5.4",
-        "vlucas/valitron": "^1.4"
+        "swiftmailer/swiftmailer": "^5.4"
     },
     "authors": [
         {
